--- a/environment.env
+++ b/environment.env
@@ -1,5 +1,23 @@
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_DB=notification
-POSTGRES_USER=postgres
+POSTGERS_DB_NAME=notification
+POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=123
+
+CRAWLER_HOST=http://localhost
+CRAWLER_PORT=8080
+CRAWLER_ITEM_PATH=/api/v1/items
+CRAWLER_RUN_PATH=/api/v1/runs
+
+USERDATA_HOST=http://localhost
+USERDATA_PORT=8080
+USERDATA_PATH=/api/v1/users
+
+USERDATADIC_HOST=http://localhost
+USERDATADIC_PORT=8080
+USERDATADIC_ITEMS_TO_FIND_PATH=/api/v1/ItemsToFind
+USERDATADIC_PRICE_SETTINGS_PATH=/api/v1/PriceSetting
+
+SENDER_HOST=http://localhost
+SENDER_PORT=8081
+SENDER_PATH=/api/v1/sender
